Fix Firefox scrollbar and floating table header glitch.

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,8 @@
 
 * {
   box-sizing: border-box;
+  -moz-scrollbar-width: thin;
+  scrollbar-width: thin;
 }
 
 html {
